feat: implement  GET  /permissions/accounts/{accountId}/staff/{staffId} endpoint
